upload pela serial, e parece estar funcionando a  lista das amostras com dma, queue e etc

--- a/rtos-template.ioc
+++ b/rtos-template.ioc
@@ -1,12 +1,18 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ContinuousConvMode=ENABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EnableAnalogWatchDog=false
+ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_CC2
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,ExternalTrigConv,InjNumberOfConversion
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,ExternalTrigConv,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,NbrOfConversion,EnableAnalogWatchDog
 ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
@@ -159,10 +165,11 @@ SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
 SH.S_TIM2_CH2.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=AutoReloadPreload,Prescaler,Period,Channel-Output Compare2 CH2,OCMode_2
+TIM2.IPParameters=AutoReloadPreload,Prescaler,Period,Channel-Output Compare2 CH2,OCMode_2,Pulse-Output Compare2 CH2
 TIM2.OCMode_2=TIM_OCMODE_TOGGLE
-TIM2.Period=115
-TIM2.Prescaler=100
+TIM2.Period=18750
+TIM2.Prescaler=10
+TIM2.Pulse-Output\ Compare2\ CH2=50
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
