--- a/rtos-template.ioc
+++ b/rtos-template.ioc
@@ -1,11 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.ContinuousConvMode=ENABLE
+ADC1.ContinuousConvMode=DISABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableAnalogWatchDog=false
 ADC1.EnableRegularConversion=ENABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_CC2
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,ExternalTrigConv,InjNumberOfConversion,DataAlign,ScanConvMode,DiscontinuousConvMode,EnableRegularConversion,NbrOfConversion,EnableAnalogWatchDog
 ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=1
@@ -25,8 +25,10 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
-FREERTOS.IPParameters=Tasks01
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=10000
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
@@ -37,27 +39,25 @@ Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM2
+Mcu.IP7=TIM3
 Mcu.IP8=USART1
 Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB7
-Mcu.Pin11=VP_FREERTOS_VS_ENABLE
-Mcu.Pin12=VP_SYS_VS_ND
-Mcu.Pin13=VP_SYS_VS_tim1
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PB3
-Mcu.Pin9=PB6
-Mcu.PinsNb=15
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=VP_SYS_VS_ND
+Mcu.Pin11=VP_SYS_VS_tim1
+Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA6
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PB6
+Mcu.Pin8=PB7
+Mcu.Pin9=VP_FREERTOS_VS_ENABLE
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -82,9 +82,9 @@ PA0-WKUP.GPIO_Label=SENSOR
 PA0-WKUP.Signal=ADCx_IN0
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA6.Signal=S_TIM3_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB3.Signal=S_TIM2_CH2
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -93,10 +93,6 @@ PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=Led
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
@@ -136,7 +132,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -161,15 +157,14 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=AutoReloadPreload,Prescaler,Period,Channel-Output Compare2 CH2,OCMode_2,Pulse-Output Compare2 CH2
-TIM2.OCMode_2=TIM_OCMODE_TOGGLE
-TIM2.Period=56250
-TIM2.Prescaler=10
-TIM2.Pulse-Output\ Compare2\ CH2=50
+SH.S_TIM3_CH1.0=TIM3_CH1,Output Compare1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-Output Compare1 CH1,Prescaler,Period,TIM_MasterOutputTrigger,AutoReloadPreload
+TIM3.Period=56250-1
+TIM3.Prescaler=10-1
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
@@ -178,6 +173,6 @@ VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
